# tauri-starter

./: .gitignore  Cargo.toml  README.md  components.json  index.html  package.json  pnpm-lock.yaml  pnpm-workspace.yaml  tsconfig.json
desktop/: package.json  tailwind.config.js  vite.config.ts
desktop/src/: main.tsx
desktop/src-tauri/: Cargo.toml  tauri.conf.json
desktop/src-tauri/capabilities/: default.json
desktop/src/views/: home.tsx
src/: router.ts
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/src/: main.rs
src/components/: default-layout.tsx
src/components/ui/: input.tsx
src/css/: tailwind.css
